--- a/css/app.css
+++ b/css/app.css
@@ -1,4 +1,7 @@
+@import url('https://fonts.googleapis.com/css?family=Roboto&display=swap');
+
 html {
+    font-family: 'Roboto';
     box-sizing: border-box;
     height: 100%;
 }
